Services/PgAdmin/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: my-pgadmin
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-pgadmin
  selector:
    app: pgadmin
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 11.1.0.17
    - ip: 11.1.0.18
    - ip: 11.1.0.19
    - ip: 11.1.0.20
